# vkr.build

./: .gitignore  DEV.md  DEV_GUIDE.md  README.md  USER_GUIDE.md  pyproject.toml  vkr.css
.github/ISSUE_TEMPLATE/: запрос-на-новый-функционал.md  сообщение-об-ошибке.md
example/: README.md  build.ps1  kyrsach.md  toc.md
examples/demo/: document.toml
examples/demo/parts/: Введение.md  Заключение.md  Практическая часть.md  Приложение. Код программы.md  Приложение. Скрин.md  Теоретическая часть.md
examples/old/: build.ps1
examples/simple-full/: 1-Введение.md  3-Основное содержание.md  5-Заключение.md  6-Список источников.md  custom.css  document.toml  Введение.md  Заключение.md  История.md  Проблемы и пути решения.md  Список источников.md
extra/: Приложения.html
sample/: kyrsach.md
styles/: vkr.css
utils/: gen-toc.py
vkr_build/: __main__.py  cli.py  config.py  console.py  document_builder.py  toc.py  utils.py
vkr_build/preprocess_stages/: images.py  numbering.py  stage.py
vkr_build/validators/: toc.py  validator.py
