[tool.poetry]
name = "vkr-build"
version = "0.1.0"
description = ""
authors = ["dx3mod"]
license = "MIT"
readme = "README.md"
packages = [{include = "vkr_build"}]
include = ["styles/*"]

[tool.poetry.dependencies]
python = "^3.12"
weasyprint = "^62.3"
typer = "^0.12.3"
pydantic = "^2.7.4"
mistletoe = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
